Updated Body Content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>teehee</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+	    <title>Emily's Portfolio</title>
+	    <meta charset="UTF-8">
+<!-- 	    <style>
+	    	<a:link {
+	    		color:green;
+	    	}
+	    	a:visited {
+	    		color:purple;
+	    	}
+	    	a:active {
+	    		color:red;
+	    	}>
+	    </style> -->
+	</head>
+	<body>
+<!-- 		<h1 style="color:salmon">la dee doo</h1> -->
+		<p>Is<br>this<br>line breaking?</p>
+		<strong>this is the same as</strong>
+		<b>this right?</b>
+		<em>and this is the same as</em>
+		<i>i'm assuming</i>
+		<p>Y<sub>t</sub>=real GDP</p>
+<!-- 		<a href="https://emilylii1204.wixsite.com/myportfolio">my portfolio</a> -->
+	</body>
+</html>
