Added Link To Portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	    <title>Emily's Portfolio</title>
 	    <meta charset="UTF-8">
-<!-- 	    <style>
+	    <style>
 	    	<a:link {
 	    		color:green;
 	    	}
@@ -13,16 +13,20 @@
 	    	a:active {
 	    		color:red;
 	    	}>
-	    </style> -->
+	    </style>
 	</head>
 	<body>
 <!-- 		<h1 style="color:salmon">la dee doo</h1> -->
 		<p>Is<br>this<br>line breaking?</p>
 		<strong>this is the same as</strong>
+		<br>
 		<b>this right?</b>
+		<br>
 		<em>and this is the same as</em>
+		<br>
 		<i>i'm assuming</i>
 		<p>Y<sub>t</sub>=real GDP</p>
-<!-- 		<a href="https://emilylii1204.wixsite.com/myportfolio">my portfolio</a> -->
+		<p>$Y<sub>t</sub>=nominal GDP</p>
+		<a href="https://emilylii1204.wixsite.com/myportfolio">my portfolio</a>
 	</body>
 </html>
