--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 	    <title>Emily's Portfolio</title>
 	    <meta charset="UTF-8">
 	    <style>
-	    	<a:link {
+	    	a:link {
 	    		color:green;
+	    		text-decoration: none;
 	    	}
 	    	a:visited {
 	    		color:purple;
+	   			text-decoration: none;
 	    	}
 	    	a:active {
 	    		color:red;
-	    	}>
+	    		text-decoration: underline;
+	    	}
 	    </style>
 	</head>
 	<body>
@@ -28,5 +31,18 @@
 		<p>Y<sub>t</sub>=real GDP</p>
 		<p>$Y<sub>t</sub>=nominal GDP</p>
 		<a href="https://emilylii1204.wixsite.com/myportfolio">my portfolio</a>
+		<ul style="list-style-type: disc">
+			<li>coconut yogurt</li>
+			<li>blueberries</li>
+			<li>strawberries</li>
+			<li>bananas</li>
+		</ul>
+		<ol type="i">
+			<li>cocoa bits</li>
+			<li>coconut flakes</li>
+			<li>oatmeal</li>
+			<li>sunflower seeds?</li>
+			<li>halotop</li>
+		</ol>
 	</body>
 </html>
