Updated Link Effects

--- a/index.html
+++ b/index.html
@@ -6,20 +6,28 @@
 	    <style>
 	    	a:link {
 	    		color:green;
+	    		background-color: transparent;
 	    		text-decoration: none;
 	    	}
 	    	a:visited {
 	    		color:purple;
+	    		background-color: transparent;
 	   			text-decoration: none;
+	    	}
+	    	a:hover {
+	    		color:pink;
+	    		background-color: transparent;
+	   			text-decoration: underline;
 	    	}
 	    	a:active {
 	    		color:red;
+	    		background-color: transparent;
 	    		text-decoration: underline;
 	    	}
 	    </style>
 	</head>
 	<body>
-<!-- 		<h1 style="color:salmon">la dee doo</h1> -->
+		<h1 style="color:salmon">la dee doo</h1>
 		<p>Is<br>this<br>line breaking?</p>
 		<strong>this is the same as</strong>
 		<br>
@@ -30,7 +38,7 @@
 		<i>i'm assuming</i>
 		<p>Y<sub>t</sub>=real GDP</p>
 		<p>$Y<sub>t</sub>=nominal GDP</p>
-		<a href="https://emilylii1204.wixsite.com/myportfolio">my portfolio</a>
+		<a href="https://emilylii1204.wixsite.com/myportfolio" target="_blank">my portfolio</a>
 		<ul style="list-style-type: disc">
 			<li>coconut yogurt</li>
 			<li>blueberries</li>
@@ -38,10 +46,11 @@
 			<li>bananas</li>
 		</ul>
 		<ol type="i">
-			<li>cocoa bits</li>
-			<li>coconut flakes</li>
-			<li>oatmeal</li>
-			<li>sunflower seeds?</li>
+			<ul>
+				<li>cocoa bits</li>
+				<li>coconut flakes</li>
+				<li>oatmeal</li>
+				<li>sunflower seeds?</li>
 			<li>halotop</li>
 		</ol>
 	</body>
