Reorganized And Fixed Open Close Tag

--- a/html-quiz/index.html
+++ b/html-quiz/index.html
@@ -17,19 +17,18 @@
 		</li>
   	<br>
   		<li>
-  			<a href="https://truthlabs.com/">my favorite website</a>
+  			<a href="https://truthlabs.com/" target='_blank'>my favorite website</a>
   		</li>
   	<br>
-  		<li>
   			<p>This is my favorite website due to the creative transitions, color scheme and how it brings different elements into the web page while making it look harmonious. I also love how it changes in layout when resizing the browser but also retaining the theme without changing it too much.</p>
-  		</li>
+  	
   	<br>
   		<li>
   			<img src="Crosswings.jpg" alt="An image I drew for a friend that symbolizes the ressurection of Jesus.">
   		</li>
   	<br>
   		<li>
-  			<b><marked>hello this is your father</marked></b>
+  			<b><ins><em>hello this is your father</em></ins></b>
   		</li>
   	<br>
   		<li>
@@ -48,11 +47,13 @@
   	<br>
   		<li>
 		  	<pre>
-		  		I'm        stressed         from	this quiz
+	I'm        stressed         from	this quiz
+will 	I 			fail or will  		I pass
 
-		  			will 	I 			fail or will  		I pass
+		  
 
-		  			I'd' 	like 	an 			A 	please!
+
+		  	I'd' 	like 	an 			A 	please!
 		  	</pre>
 		 </li>
   		<li>
