--- a/personal-journey/index.html
+++ b/personal-journey/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
   <title>My page title</title>
+  	<meta charset="utf-8">  
+    <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
+    <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
   <style>
     /* Your optional CSS styles go here */
   </style>
 </head>
 <body>
   <p>Link to different pages with anchor tags. Make sure to use relative urls.</p>
-  <a href="page2.html">Let's go to page 2</a>
+  <a href="page2.html" class="title">the</a>
+  <a href="page2.html" class="title2">li</a>
+  <a href="page2.html" class="title3">family</a>
+  <p>how i loosen up my family</p>
 </body>
 </html>
