Updated Index Page 2 CSS

--- a/personal-journey/index.html
+++ b/personal-journey/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My page title</title>
+  <title>The Li Family</title>
   	<meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
     <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
@@ -10,10 +10,13 @@
   </style>
 </head>
 <body>
-  <p>Link to different pages with anchor tags. Make sure to use relative urls.</p>
-  <a href="page2.html" class="title">the</a>
-  <a href="page2.html" class="title2">li</a>
-  <a href="page2.html" class="title3">family</a>
-  <p>how i loosen up my family</p>
+	<div id="wrapper">
+		<div class="title">
+	  	<a href="page2.html">the</a>
+	  	</div>
+	  	<a href="page2.html" class="title2">li</a>
+	  	<a href="page2.html" class="title3">family</a>
+	  </div>
+  <p class="loosen">how i loosen up my family from being too traditional</p>
 </body>
 </html>
