--- a/personal-journey/page2.html
+++ b/personal-journey/page2.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>A boring second page</title>
+  <title>The Li Family</title>
+    <meta charset="utf-8">  
+    <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
+    <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
   <style>
     /* Your optional CSS styles go here */
   </style>
 </head>
 <body>
-  <p>This is the second page.</p>
-  <h1>
-    <a href="page3.html">I'm feeling adventurous.</a>
-  </h1>
-  <a href="index.html">I'd prefer to go back home.</a>
+  <a href="page3.html" class="nudge">nudge</a>
+  <a href="index.html" class="home">home</a>	
+  	<p class="content1">awkward<br>family dinners</p>
+	<p class="content2">all about that<br>feng shui</p>
+	<p class="content3">study, study, study</p>
+	<p class="content4">chinese food<br>today and every day</p>
+	<p class="content5">silence during<br>family dinners</p>
+	<p class="content6">sexist relatives</p>
+	<p class="content7">no piercings, no tattoo</p>
+	<p class="content8">no one shall eat until<br>everyone is at the table</p>
+	<p class="content9">bare christmas tree</p>
+	<pre class="orgletter">
+t	 		
+
+l	 		
+
+f			
+
+i 			
+	</pre>
+	<pre class="orgletter2">
+ 		h 		
+
+  	 	i 		 
+
+ 		a 		
+
+   		l 		
+	</pre>
+		<pre class="orgletter3">
+ 		 		e 		
+
+ 		 		/ 		
+
+ 				m 		
+
+ 				y 		
+	</pre>
+<!-- 	
+	<h1 class="t">t</h1>
+	<h1 class="h">h</h1>
+	<h1 class="e">e</h1>
+	<h1 class="l">l</h1>
+	<h1 class="i">i</h1>
+	<h1 class="f">f</h1>
+	<h1 class="a">a</h1>
+	<h1 class="m">m</h1>
+	<h1 class="i2">i</h1>
+	<h1 class="l2">l</h1>
+	<h1 class="y">y</h1> -->
 </body>
 </html>
