Added Page 5 And 6

--- a/personal-journey/page2.html
+++ b/personal-journey/page2.html
@@ -11,54 +11,40 @@
 </head>
 <body>
   <a href="page3.html" class="nudge">nudge</a>
-  <a href="index.html" class="home">home</a>	
-  	<p class="content1">awkward<br>family dinners</p>
-	<p class="content2">all about that<br>feng shui</p>
-	<p class="content3">study, study, study</p>
-	<p class="content4">chinese food<br>today and every day</p>
-	<p class="content5">silence during<br>family dinners</p>
-	<p class="content6">sexist relatives</p>
-	<p class="content7">no piercings, no tattoo</p>
-	<p class="content8">no one shall eat until<br>everyone is at the table</p>
-	<p class="content9">bare christmas tree</p>
-	<pre class="orgletter">
-t	 		
-
-l	 		
-
-f			
-
-i 			
-	</pre>
-	<pre class="orgletter2">
- 		h 		
-
-  	 	i 		 
-
- 		a 		
-
-   		l 		
-	</pre>
-		<pre class="orgletter3">
- 		 		e 		
-
- 		 		/ 		
-
- 				m 		
-
- 				y 		
-	</pre>
-<!-- 	
-	<h1 class="t">t</h1>
-	<h1 class="h">h</h1>
-	<h1 class="e">e</h1>
-	<h1 class="l">l</h1>
-	<h1 class="i">i</h1>
-	<h1 class="f">f</h1>
-	<h1 class="a">a</h1>
-	<h1 class="m">m</h1>
-	<h1 class="i2">i</h1>
-	<h1 class="l2">l</h1>
-	<h1 class="y">y</h1> -->
+  <a href="index.html" class="home2">home</a> 
+  <a href="index.html" class="home">nah i'm good</a> 
+  <p class="content1">awkward<br>family dinners</p>
+  <p class="content2">all about that<br>feng shui</p>
+  <p class="content3">study, study, study</p>
+  <p class="content4">chinese food<br>today and every day</p>
+  <p class="content5">silence during<br>family dinners</p>
+  <p class="content6">sexist relatives</p>
+  <p class="content7">no piercings, no tattoo</p>
+  <p class="content8">no one shall eat until<br>everyone is at the table</p>
+  <p class="content9">bare christmas tree</p>
+<!--   <div class="t2">t</div>
+  <div class="t3">h</div>
+  <div class="t">e</div>
+  <div class="t2">l</div>
+  <div class="t3">i</div>
+  <div class="t">/</div>
+  <div class="t2">f</div>
+  <div class="t3">a</div>
+  <div class="t">m</div>
+  <div class="t2">i</div>
+  <div class="t3">l</div>
+  <div class="t">y</div> -->
+  <div class="t">t</div>
+  <div class="h">h</div>
+  <div class="e">e</div>
+  <div class="l">l</div>
+  <div class="i">i</div>
+  <div class="d">/</div>
+  <div class="f">f</div>
+  <div class="a">a</div>
+  <div class="m">m</div>
+  <div class="i2">i</div>
+  <div class="l2">l</div>
+  <div class="y">y</div>
 </body>
 </html>
