--- a/personal-journey/page3.html
+++ b/personal-journey/page3.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>VOID</title>
+  <title>The Li Family</title>
+    <meta charset="utf-8">  
+    <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
+    <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
   <style>
-    body {
-      background-color: black;
-      color: red;
-    }
-
-    a {
-      color: yellow;
-    }
+    /* Your optional CSS styles go here */
   </style>
 </head>
 <body>
-  <h1>Welcome to the void!!!</h1>
-  <a href="sunny.html">Take me somewhere sunny.</a>
+  <a href="index.html" class="home2">home</a>   
+  <a href="page4.html" class="nudge2">nudge</a>
+  <a href="page2.html" class="home">nah i'm good</a>  
+  <p class="content1">awkward<br>family dinners</p>
+  <p class="content2">all about that<br>feng shui</p>
+  <p class="content3b">study, study. leisure</p>
+  <p class="content4">chinese food<br>today and every day</p>
+  <p class="content5b">parital silence during<br>family dinners</p>
+  <p class="content6">sexist relatives</p>
+  <p class="content7b">no piercings?<br>definitely no tattoo</p>
+  <p class="content8b">some shall eat until<br>everyone is at the table</p>
+  <p class="content9">bare christmas tree</p>
+<!--   <div class="t2">t</div>
+  <div class="t3">h</div>
+  <div class="t">e</div>
+  <div class="t2">l</div>
+  <div class="t3">i</div>
+  <div class="t">/</div>
+  <div class="t2">f</div>
+  <div class="t3">a</div>
+  <div class="t">m</div>
+  <div class="t2">i</div>
+  <div class="t3">l</div>
+  <div class="t">y</div> -->
+  <div class="t2">t</div>
+  <div class="h2">h</div>
+  <div class="e">e</div>
+  <div class="l4">l</div>
+  <div class="i">i</div>
+  <div class="d2">/</div>
+  <div class="f">f</div>
+  <div class="a">a</div>
+  <div class="m2">m</div>
+  <div class="i3">i</div>
+  <div class="l3">l</div>
+  <div class="y2">y</div>
 </body>
 </html>
