Fixed Letter Position

--- a/personal-journey/page3.html
+++ b/personal-journey/page3.html
@@ -10,10 +10,10 @@
   </style>
 </head>
 <body>
-  <a href="page4.html" class="nudge">nudge</a>
+  <a href="page4.html" class="nudge">2 years later</a>
   <a href="index.html" class="home2">home</a>   
 
-  <a href="page2.html" class="home">nah i'm good</a>  
+  <a href="page2.html" class="home">the old li family</a>  
   <p class="content1">awkward<br>family dinners</p>
   <p class="content2">all about that<br>feng shui</p>
   <p class="content3b">study, study. leisure</p>
