--- a/personal-journey/page4.html
+++ b/personal-journey/page4.html
@@ -12,8 +12,8 @@
 <body>
   
   <a href="index.html" class="home2">home</a> 
-  <a href="page5.html" class="nudge">nudge</a>
-  <a href="page3.html" class="home">nah i'm good</a>
+  <a href="page5.html" class="nudge">4 years later</a>
+  <a href="page3.html" class="home">2 years ago</a>
   
  
 <!--   <div class="t2">t</div>
