--- a/personal-journey/page6.html
+++ b/personal-journey/page6.html
@@ -10,9 +10,9 @@
   </style>
 </head>
 <body>
-  <a href="page6.html" class="nudge">nudge</a>
+  <div class="nudge">still in progress...</div>
   <a href="index.html" class="home2">home</a> 
-  <a href="page5.html" class="home">going backwards</a>
+  <a href="page5.html" class="home">2 years ago</a>
   
  
 <!--   <div class="t2">t</div>
