--- a/personal-journey/page2.html
+++ b/personal-journey/page2.html
@@ -10,9 +10,9 @@
   </style>
 </head>
 <body>
-  <a href="page3.html" class="nudge">nudge</a>
+  <a href="page3.html" class="nudge">1 year later</a>
   <a href="index.html" class="home2">home</a> 
-  <a href="index.html" class="home">nah i'm good</a> 
+  <a href="index.html" class="home">this is too much<br> work, i give up</a> 
   <p class="content1">awkward<br>family dinners</p>
   <p class="content2">all about that<br>feng shui</p>
   <p class="content3">study, study, study</p>
