Updated Homepage Added 2-8 Pages

--- a/click-click/page2.html
+++ b/click-click/page2.html
@@ -9,9 +9,14 @@
     /* Your optional CSS styles go here */
   </style>
 </head>
-<body>
+<body> 
+<div class="whitebox"></div>
+<!--   <a href="page3.html"><p class="arrowdown">&#8897;</p></a> -->
+  <a href="page3.html" class="arrowdown">&#8897;</a>
+<!--   <p class="arrowup">&#8896;</p> -->
+<!-- <a href="index.html" class="arrowup">&#8896;</a> -->
   <a href="index.html" class="home">#AwkwardMoment</a> 
-  <a href="page3.html" class="down"><i class="arrow down"></i></a>
+<!--   <a href="page3.html" class="down"><i class="arrow down"></i></a> -->
     <h1 class="authormainpost1">Mohammad Ali</h1>
     <h2 class="usernamemainpost1">@maglolz</h2>
     <h3 class="datemainpost1">4h5 hours ago</h3>
@@ -22,5 +27,6 @@
     <div class="rectangle2"></div>
     <div class="rectangle3"></div>
   </div>
+
 </body>
 </html>
