--- a/click-click/page4.html
+++ b/click-click/page4.html
@@ -1,57 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Li Family</title>
+  <title>#AwkwardMoment</title>
     <meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
-    <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
+    <link href='./css/main2.css' media='all' rel='stylesheet' type='text/css' />
   <style>
     /* Your optional CSS styles go here */
   </style>
 </head>
 <body>
-  
-  <a href="index.html" class="home2">home</a> 
-  <a href="page5.html" class="nudge">4 years later</a>
-  <a href="page3.html" class="home">2 years ago</a>
-  
- 
-<!--   <div class="t2">t</div>
-  <div class="t3">h</div>
-  <div class="t">e</div>
-  <div class="t2">l</div>
-  <div class="t3">i</div>
-  <div class="t">/</div>
-  <div class="t2">f</div>
-  <div class="t3">a</div>
-  <div class="t">m</div>
-  <div class="t2">i</div>
-  <div class="t3">l</div>
-  <div class="t">y</div> -->
-  <div class="t3">t</div>
-  <div class="h3">h</div>
-  <div class="e2">e</div>
-  <div class="l4">l</div>
-  <div class="i">i</div>
-  <div class="d2">/</div>
-  <div class="f2">f</div>
-  <div class="a2">a</div>
-  <div class="m2">m</div>
-  <div class="i3">i</div>
-  <div class="l6">l</div>
-  <div class="y2">y</div>
-    <div class="whiterect"></div>
-  <div class="whiterect2"></div>
-  <div class="whiterect3"></div> 
-   <p class="content1b">initiating conversaitions</p>
-  <p class="content2b">all about that<br>feng shui</p>
-  <p class="content3c">study, study. leisure</p>
-  <p class="content4b">chinese food some days and<br> introduce other cuisines</p>
-  <p class="content5c">hugged relatives</p>
-  <p class="content6b"> started christmas decorating tradition</p>
-  <p class="content7c">no piercings?<br>definitely no tattoo</p>
-  <p class="content8c">whoever's hungry</p>
-  <p class="content9b">somewhat awkward dinners</p>
- 
+  <div class="whitebox"></div>  
+  <a href="index.html" class="home">#AwkwardMoment</a>  
+  <a href="page3.html" class="arrowup">&#8896;</a> 
+  <a href="page5.html" class="arrowdown">&#8897;</a>
+
+    <h1 class="authormainpost1">Robert Johnson</h1>
+    <h2 class="usernamemainpost3">@bobby_squad13</h2>
+    <h3 class="datemainpost1">13h2 hours ago</h3>
+    <p class="mainpost1">Just minding my own business, waking up from a nap. Went to go knock on my roommates door to see what he is up too. A girl opens the door and says "he is at the store". Mean-<br>while I'm just in my underwear. #awkwardmoment
+    </p>
+  <div class="rectangle">
+    <!-- <div class="rectangle5"></div> -->
+    <div class="rectangle2"></div>
+    <div class="rectangle3"></div>
+  </div>
 </body>
 </html>
