--- a/click-click/page5.html
+++ b/click-click/page5.html
@@ -1,57 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Li Family</title>
+  <title>#AwkwardMoment</title>
     <meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
-    <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
+    <link href='./css/main2.css' media='all' rel='stylesheet' type='text/css' />
   <style>
     /* Your optional CSS styles go here */
   </style>
 </head>
 <body>
-  <a href="page6.html" class="nudge">6 years later</a>
-  <a href="index.html" class="home2">home</a> 
-  <a href="page3.html" class="home">2 years ago</a>
-  
- 
-<!--   <div class="t2">t</div>
-  <div class="t3">h</div>
-  <div class="t">e</div>
-  <div class="t2">l</div>
-  <div class="t3">i</div>
-  <div class="t">/</div>
-  <div class="t2">f</div>
-  <div class="t3">a</div>
-  <div class="t">m</div>
-  <div class="t2">i</div>
-  <div class="t3">l</div>
-  <div class="t">y</div> -->
-  <div class="tfinal">t</div>
-  <div class="hfinal">h</div>
-  <div class="efinal">e</div>
-  <div class="lfinal">l</div>
-  <div class="ifinal">i</div>
-  <div class="dfinal">/</div>
-  <div class="ffinal">f</div>
-  <div class="afinal">a</div>
-  <div class="mfinal">m</div>
-  <div class="ifinal2">i</div>
-  <div class="lfinal2">l</div>
-  <div class="yfinal">y</div>
-  <div class="whiterecta"></div>
-  <div class="whiterect2"></div>
-  <div class="whiterect3"></div> 
-  <div class="whiterect4"></div> 
-   <p class="content1b">initiating conversaitions</p>
-  <p class="content2b">feng shui</p>
-  <p class="content3c">study, whatever grade you get, it's ok.</p>
-  <p class="content4b">japanese food<br>experiment with other cuisines</p>
-  <p class="content5c">more interaction with relatives</p>
-  <p class="content6b">continued christmas decorating tradition</p>
-  <p class="content7c">maybe piercings<br>still no tattoo</p>
-  <p class="content8c">starts joking and laughing</p>
-  <p class="content9b">phones during dinners dinners</p>
- 
+  <div class="whitebox"></div>  
+  <a href="index.html" class="home">#AwkwardMoment</a>  
+  <a href="page4.html" class="arrowup">&#8896;</a> 
+  <a href="page6.html" class="arrowdown">&#8897;</a>
+
+    <h1 class="authormainpost1">^_^</h1>
+    <h2 class="usernamemainpost4">@BBWslayer666</h2>
+    <h3 class="datemainpost1">15h15 hours ago</h3>
+    <p class="mainpost1">The awkward moment when u miscalculate where ur <br>pockets are twice in a row when u try to put ur hands in <br>them and get embarrassed so u just say fuck it and pull ur whole dick out. #awkwardmoment
+
+    </p>
+  <div class="rectangle">
+    <!-- <div class="rectangle5"></div> -->
+    
+    <div class="rectangle3"></div>
+    <div class="rectangle6"></div>
+  </div>
 </body>
 </html>
