--- a/click-click/page7.html
+++ b/click-click/page7.html
@@ -12,16 +12,16 @@
 <body>
   <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
-  <a href="page5.html" class="arrowup">&#8896;</a> 
-  <a href="page7.html" class="arrowdown">&#8897;</a>
+  <a href="page6.html" class="arrowup">&#8896;</a> 
+  <a href="page8.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Aoife Nolan</h1>
-    <h2 class="usernamemainpost5">@flagsam</h2>
-    <h3 class="datemainpost1">Feb 26 </h3>
-    <p class="mainpost1">One time I asked my friends who the lost looking student<br> was in the maths society room and was quickly informed he was one of the lecturers. #AwkwardMoment
+    <h1 class="authormainpost1">biscuit brian</h1>
+    <h2 class="usernamemainpost5">@BrianSeanster</h2>
+    <h3 class="datemainpost1">Feb 6</h3>
+    <p class="mainpost1">That #awkwardmoment when you think you’re alone in the work bathroom so you start dancing in the mirror and it turns out you weren’t alone
     </p>
   <div class="rectangle">
-    <div class="rectangle8"></div>
+    <div class="rectangle9"></div>
     <div class="rectangle7"></div>
   </div>
 </body>
