--- a/click-click/page8.html
+++ b/click-click/page8.html
@@ -12,13 +12,13 @@
 <body>
   <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
-  <a href="page5.html" class="arrowup">&#8896;</a> 
-  <a href="page7.html" class="arrowdown">&#8897;</a>
+  <a href="page7.html" class="arrowup">&#8896;</a> 
+  <a href="page9.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Aoife Nolan</h1>
-    <h2 class="usernamemainpost5">@flagsam</h2>
-    <h3 class="datemainpost1">Feb 26 </h3>
-    <p class="mainpost1">One time I asked my friends who the lost looking student<br> was in the maths society room and was quickly informed he was one of the lecturers. #AwkwardMoment
+    <h1 class="authormainpost1">Jollene De Vera</h1>
+    <h2 class="usernamemainpost6">@jaydi_vera</h2>
+    <h3 class="datemainpost1">Feb 4</h3>
+    <p class="mainpost1">That #awkwardMoment when someone you know waves at you so you wave back then they go to you to start a convo but all you wanted to do was wave and jet
     </p>
   <div class="rectangle">
     <div class="rectangle8"></div>
