--- a/click-click/page3.html
+++ b/click-click/page3.html
@@ -10,9 +10,11 @@
   </style>
 </head>
 <body>
+  <div class="whitebox"></div>
+  <a href="page4.html" class="arrowdown">&#8897;</a>
+<!--   <p class="arrowup">&#8896;</p> -->
+  <a href="page2.html" class="arrowup">&#8896;</a> 
   <a href="index.html" class="home">#AwkwardMoment</a> 
-  <a href="page2.html" class="up"><i class="arrow up"></i></a>
-  <a href="page3.html" class="down"><i class="arrow down"></i></a>
     <h1 class="authormainpost1">Alan Carr</h1>
     <h2 class="usernamemainpost2">@AlanCarr</h2>
     <h3 class="datemainpost1">9h9 hours ago</h3>
