--- a/click-click/page11.html
+++ b/click-click/page11.html
@@ -12,17 +12,17 @@
 <body>
   <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
-  <a href="page9.html" class="arrowup">&#8896;</a> 
-  <a href="page11.html" class="arrowdown">&#8897;</a>
+  <a href="page10.html" class="arrowup">&#8896;</a> 
+  <a href="page12.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Rob Roselli</h1>
-    <h2 class="usernamemainpost5">@cam3raface</h2>
-    <h3 class="datemainpost1">Feb1</h3>
-    <p class="mainpost1">Had one headphone in and thought I heard the Walgreens cashier ask me to join their rewards program but she said “enjoy your night” but I looked her in the eyes and said “not today, thanks” and walked out. #awkwardmoment #thisismylife
+    <h1 class="authormainpost1">Beatrice Venegas</h1>
+    <h2 class="usernamemainpost6">@BeatriceVenega2</h2>
+    <h3 class="datemainpost1">Jan 25</h3>
+    <p class="mainpost1">That awkward moment when you're playing Cards Against Humanity with your mom, and the card that has the word queef comes up and she ask you, "what the hell is a queef"? So you have to explain it to her and she says "oh I didn't know it had a name" #awkwardmoment
     </p>
   <div class="rectangle">
 <!--     <div class="rectangle01"></div> -->
-    <div class="rectangle11"></div>
+    <div class="rectangle13"></div>
     <div class="rectangle7"></div>
     <div class="rectangle3"></div>
     <div class="rectangle12"></div>
