--- a/click-click/page12.html
+++ b/click-click/page12.html
@@ -12,20 +12,21 @@
 <body>
   <div class="whitebox"></div>  
   <a href="index.html" class="home">#AwkwardMoment</a>  
-  <a href="page9.html" class="arrowup">&#8896;</a> 
-  <a href="page11.html" class="arrowdown">&#8897;</a>
+  <a href="page11.html" class="arrowup">&#8896;</a> 
+  <a href="page13.html" class="arrowdown">&#8897;</a>
 
-    <h1 class="authormainpost1">Rob Roselli</h1>
-    <h2 class="usernamemainpost5">@cam3raface</h2>
-    <h3 class="datemainpost1">Feb1</h3>
-    <p class="mainpost1">Had one headphone in and thought I heard the Walgreens cashier ask me to join their rewards program but she said “enjoy your night” but I looked her in the eyes and said “not today, thanks” and walked out. #awkwardmoment #thisismylife
+    <h1 class="authormainpost1">Nikolas Romero</h1>
+    <h2 class="usernamemainpost6">@niko19romero</h2>
+    <h3 class="datemainpost1">Jan 23</h3>
+    <p class="mainpost1">That awkward moment when you’re walking around naked <br>at your own house and you forget there is a glass window at your front door and the ups delivery guy makes eye contact with you while putting down the package.
+
     </p>
   <div class="rectangle">
 <!--     <div class="rectangle01"></div> -->
-    <div class="rectangle11"></div>
+    <div class="rectangle14"></div>
     <div class="rectangle7"></div>
     <div class="rectangle3"></div>
-    <div class="rectangle12"></div>
+
   </div>
 </body>
 </html>
