Updated Index.html Added Links

--- a/index.html
+++ b/index.html
@@ -27,31 +27,12 @@
 	    </style>
 	</head>
 	<body>
-		<h1 style="color:salmon">la dee doo</h1>
-		<p>Is<br>this<br>line breaking?</p>
-		<strong>this is the same as</strong>
+		<h1 style="color:salmon ">EMILY LI</h1>
+		<a href="https://lie771.github.io/click-click/index.html">Click Click</a>
 		<br>
-		<b>this right?</b>
+		<a href="https://lie771.github.io/personal-journey/index.html">Personal Journey</a>
 		<br>
-		<em>and this is the same as</em>
-		<br>
-		<i>i'm assuming</i>
-		<p>Y<sub>t</sub>=real GDP</p>
-		<p>$Y<sub>t</sub>=nominal GDP</p>
-		<a href="https://emilylii1204.wixsite.com/myportfolio" target="_blank">my portfolio</a>
-		<ul style="list-style-type: disc">
-			<li>coconut yogurt</li>
-			<li>blueberries</li>
-			<li>strawberries</li>
-			<li>bananas</li>
-		</ul>
-		<ol type="i">
-			<ul>
-				<li>cocoa bits</li>
-				<li>coconut flakes</li>
-				<li>oatmeal</li>
-				<li>sunflower seeds?</li>
-			<li>halotop</li>
-		</ol>
+		<a href="https://lie771.github.io/personal-journey-archive/index.html">Personal Journey Archive</a>
+		
 	</body>
 </html>
