Added http in First Link

--- a/personal-journey-archive/index.html
+++ b/personal-journey-archive/index.html
@@ -12,11 +12,11 @@
 <body>
 	<div id="wrapper">
 		<div class="title">
-	  	<a href="chikh538.github.io/personal journey/index.html" class="names">Kristen Chik</a>
+	  	<a href="http://chikh538.github.io/personal journey/index.html" class="names">Kristen Chik</a>
 	  	</div>
 	  	<a href="funge549.github.io/personal-journey/index.html" class="names">Evelin Fung</a>
 	  	<a href="garcv701.github.io/personal journey/index.html" class="names">Vincent Garcia</a>
-      <a href="" class="title3">Yangchen Gruben</a>
+      <a href="" class="names">Yangchen Gruben</a>
       <a href="esragumrukculer.github.io/week2/index.html" class="names">Esra Gumrukculer</a>
       <a href="shutingguo.github.io/personal experience/index.html" class="names">Shuting Guo</a>
       <a href="kayaa946.github.io/personal journey/index.html" class="names">Ayse Yaren Kaya</a>
