--- a/personal-journey-archive/index.html
+++ b/personal-journey-archive/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="wrapper">
 		<div class="title">
-	  	<a href="http://chikh538.github.io/personal journey/index.html" class="names">Kristen Chik</a>
+	  	<a href="chikh538.github.io/personal journey" class="names">Kristen Chik</a>
 	  	</div>
 	  	<a href="funge549.github.io/personal-journey/index.html" class="names">Evelin Fung</a>
 	  	<a href="garcv701.github.io/personal journey/index.html" class="names">Vincent Garcia</a>
@@ -20,7 +20,7 @@
       <a href="esragumrukculer.github.io/week2/index.html" class="names">Esra Gumrukculer</a>
       <a href="shutingguo.github.io/personal experience/index.html" class="names">Shuting Guo</a>
       <a href="kayaa946.github.io/personal journey/index.html" class="names">Ayse Yaren Kaya</a>
-      <a href="khalp570.github.io/Personal Journey/index.html" class="names">Prithi Khalique</a>
+      <a href="khalp570.github.io/personaljourney/Index.html" class="names">Prithi Khalique</a>
       <a href="kims889.github.io/personaljourney/index.html" class="names">Soyeon Kim</a>
       <a href="seowxx.github.io/2personaljourney/index.html" class="names">Seowon Kim</a>
       <a href="leej312.github.io/Project_Lab/Personal Journey/index.html" class="names">Jahyun Lee</a>
