--- a/personal-journey-archive/index.html
+++ b/personal-journey-archive/index.html
@@ -14,20 +14,20 @@
 		<div class="title">
 	  	<a href="chikh538.github.io/personal journey" class="names">Kristen Chik</a>
 	  	</div>
-	  	<a href="funge549.github.io/personal-journey/index.html" class="names">Evelin Fung</a>
-	  	<a href="garcv701.github.io/personal journey/index.html" class="names">Vincent Garcia</a>
+	  	<a href="funge549.github.io/personal-journey" class="names">Evelin Fung</a>
+	  	<a href="garcv701.github.io/personal journey" class="names">Vincent Garcia</a>
       <a href="" class="names">Yangchen Gruben</a>
-      <a href="esragumrukculer.github.io/week2/index.html" class="names">Esra Gumrukculer</a>
-      <a href="shutingguo.github.io/personal experience/index.html" class="names">Shuting Guo</a>
-      <a href="kayaa946.github.io/personal journey/index.html" class="names">Ayse Yaren Kaya</a>
-      <a href="khalp570.github.io/personaljourney/Index.html" class="names">Prithi Khalique</a>
-      <a href="kims889.github.io/personaljourney/index.html" class="names">Soyeon Kim</a>
-      <a href="seowxx.github.io/2personaljourney/index.html" class="names">Seowon Kim</a>
-      <a href="leej312.github.io/Project_Lab/Personal Journey/index.html" class="names">Jahyun Lee</a>
-      <a href="lie771.github.io/personal-journey/index.html" class="names">Emily Li</a>
-      <a href="kmpnguyen0.github.io/Week 1 - Personal Journal/persionaljournal.html" class="names">Khe Nguyen</a>
-      <a href="privv824.github.io/personal-journey/index.html" class="names">Vincent Privitera</a>
-      <a href="walde906.github.io/personal-journey/index.html" class="names">Emil Waldron</a>
+      <a href="esragumrukculer.github.io/week2" class="names">Esra Gumrukculer</a>
+      <a href="shutingguo.github.io/personal experience" class="names">Shuting Guo</a>
+      <a href="kayaa946.github.io/personal journey" class="names">Ayse Yaren Kaya</a>
+      <a href="khalp570.github.io/personaljourney" class="names">Prithi Khalique</a>
+      <a href="kims889.github.io/personaljourney" class="names">Soyeon Kim</a>
+      <a href="seowxx.github.io/2personaljourney" class="names">Seowon Kim</a>
+      <a href="leej312.github.io/Project_Lab/Personal Journey" class="names">Jahyun Lee</a>
+      <a href="lie771.github.io/personal-journey" class="names">Emily Li</a>
+      <a href="kmpnguyen0.github.io/Week 1 - Personal Journal" class="names">Khe Nguyen</a>
+      <a href="privv824.github.io/personal-journey" class="names">Vincent Privitera</a>
+      <a href="walde906.github.io/personal-journey" class="names">Emil Waldron</a>
 	  </div>
 </body>
 </html>
