Cleaned Up HTML CSS

--- a/click-click/index.html
+++ b/click-click/index.html
@@ -13,6 +13,147 @@
 <body>
   <a href="index.html" class="home">#AwkwardMoment</a> 
   <div class="bodycontent">
+    <div class="ppost1">
+      <h1 class="author1"> Mohammad Ali </h1>
+      <h1 class="username1"> @maglolz </h1>
+      <h1 class="date1">4h5 hours ago</h1>
+      <a href="page2.html" ><p class="post1">Told my wife I wanted <span style="color:#FBFBFB;" ,>to go take </span> a <span style="color:#FBFBFB;" ,> romantic walk by the beach with her. Actually wanted to go see a </span> dead Whale <span style="color:#FBFBFB;" ,>I heard about on the news. </span> She was not happy. <span style="color:#FBFBFB;" ,>#awkwardmoment #notfunny</span>
+      </p></a>
+      <hr>
+    </div>
+    <div class="ppost2">
+      <h1 class="author2"> Alan Carr</h1>
+      <h1 class="username2"> @AlanCarr </h1>
+      <h1 class="date2">9h9 hours ago</h1>
+      <a href="page3.html" class="page2link"><p class="post2">
+      <span style="color:#FBFBFB;" ,>Walking through Soho and </span> a woman <span style="color:#FBFBFB;" ,>sitting outside at a cafe just</span> put her hand out to see if it’s raining <span style="color:#FBFBFB;" ,>and cupped a</span> man<span style="color:#FBFBFB;" ,>s</span> balls.<span style="color:#FBFBFB;" ,> Both looked unimpressed. #awkward</span>
+      </p></a>
+      <hr>
+    </div>
+    <div class="ppost3">
+      <h1 class="author3"> Robert Johnson </h1>
+      <h1 class="username3"> @bobby_squad13 </h1>
+      <h1 class="date3">13h2 hours ago</h1>
+      <a href="page4.html" class="page2link"><p class="post3">
+      Just <span style="color:#FBFBFB;" ,>minding my own business, </span> waking up from a nap<span style="color:#FBFBFB;" ,>. Went to go knock on my roommates door </span>to see<span style="color:#FBFBFB;" ,> what he is up too. </span>A girl <span style="color:#FBFBFB;" ,>opens the door and says "he is at the store". Meanwhile I'm just</span> in my underwear. <span style="color:#FBFBFB;" ,>#awkwardmoment</span>
+      </p></a>
+      <hr>
+    </div>
+    <div class="ppost4">
+      <h1 class="author4"> ^_^ </h1>
+      <h1 class="username4"> @slayer666 </h1>
+      <h1 class="date4">15h15 hours ago</h1>
+      <a href="page5.html" class="page2link"><p class="post4">
+      <span style="color:#FBFBFB;" ,>The awkward moment</span>when u <span style="color:#FBFBFB;" ,>miscalculate where ur pockets are twice in a row when u try to put ur hands in them and</span> get embarrassed so u just say fuck <span style="color:#FBFBFB;" ,>it and pull</span> ur <span style="color:#FBFBFB;" ,>whole</span> dick <span style="color:#FBFBFB;" ,>out </span>
+      </p></a>
+      <hr >
+    </div>
+    <div class="ppost5">
+      <h1 class="author5"> Aoife Nolan </h1>
+      <h1 class="username5"> @flagsam </h1>
+      <h1 class="date5">Feb 6</h1>
+      <a href="page6.html" class="page2link"><p class="post5">
+      One time <span style="color:#FBFBFB;" ,>I asked my friends who the</span> lost<span style="color:#FBFBFB;" ,> looking student was in the maths society room and was quickly informed he was</span> one of the lecturers. <span style="color:#FBFBFB;" ,>#AwkwardMoment</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost6">
+      <h1 class="author6"> biscuit brian </h1>
+      <h1 class="username6"> @BrianSeanster </h1>
+      <h1 class="date6">Feb 6</h1>
+      <a href="page7.html" class="page2link"><p class="post6">
+      <span style="color:#FBFBFB;" ,>That #awkwardmoment</span> when <span style="color:#FBFBFB;" ,>you think </span>you’re a<span style="color:#FBFBFB;" ,>lone in the work</span> bathroom so you start dancing <span style="color:#FBFBFB;" ,>in the mirror and it turns out you weren’t alone.</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost7">
+      <h1 class="author7"> Jollene De Vera </h1>
+      <h1 class="username7"> @jaydi_vera </h1>
+      <h1 class="date7">Feb 4</h1>
+      <a href="page8.html" class="page2link"><p class="post7">
+      <span style="color:#FBFBFB;" ,>That #awkwardMoment</span> when <span style="color:#FBFBFB;" ,>someone</span> you <span style="color:#FBFBFB;" ,>know waves at you so you wave back then they go to you to</span> start a convo <span style="color:#FBFBFB;" ,>but all</span> you <span style="color:#FBFBFB;" ,>wanted to do was wave and </span>jet.</p></a>
+      <hr>
+    </div>
+    <div class="ppost8">
+      <h1 class="author8"> Kristan Creasy </h1>
+      <h1 class="username8"> @KristanCreasy</h1>
+      <h1 class="date8">Feb 2</h1>
+      <a href="page9.html" class="page2link"><p class="post8">
+      <span style="color:#FBFBFB;" ,>Trying to have a conversation with</span> my boss<span style="color:#FBFBFB;" ,> and he starts drinking his coffee from the side of his mouth with the rim of the paper cup folded to a point. It </span>threw me <span style="color:#FBFBFB;" ,>off so much that I just stopped talking and walked </span>away.<span style="color:#FBFBFB;" ,> #AwkwardMoment</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost9">
+      <h1 class="author9"> Rob Reslli </h1>
+      <h1 class="username9"> @cam3raface</h1>
+      <h1 class="date9">Feb 1</h1>
+      <a href="page10.html" class="page2link"><p class="post9">
+      <span style="color:#FBFBFB;" ,>Had one headphone in and thought I heard the</span> Walgreens cashier ask me to <span style="color:#FBFBFB;" ,>join their rewards program but she said “enjoy your night” but I</span> look<span style="color:#FBFBFB;" ,>ed</span> her in the eyes<span style="color:#FBFBFB;" ,> and said “not today, thanks”</span> and walk<span style="color:#FBFBFB;" ,>ed</span> out.<span style="color:#FBFBFB;" ,> #awkwardmoment #thisismylife</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost10">
+      <h1 class="author10"> Beatrice Venegas </h1>
+      <h1 class="username10"> @BeatriceVenega2 </h1>
+      <h1 class="date10">Jan 25</h1>
+      <a href="page11.html" class="page2link"><p class="post10">
+      That<span style="color:#FBFBFB;" ,> awkward</span> moment when <span style="color:#FBFBFB;" ,> you're playing Cards Against Humanity with</span> your mom<span style="color:#FBFBFB;" ,> , and the card that has the word</span> queef<span style="color:#FBFBFB;" ,>  come</span>s<span style="color:#FBFBFB;" ,>  up and she ask you, "what the hell is a queef"? So you have to explain it to her and</span> she says <span style="color:#FBFBFB;" ,> "oh I didn't know it had a name" #awkwardmoment</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost11">
+      <h1 class="author11"> Nikolas Romero </h1>
+      <h1 class="username11"> @niko19romero</h1>
+      <h1 class="date11">Jan 23</h1>
+       <a href="page12.html" class="page2link"><p class="post11"> <span style="color:#FBFBFB;" ,>That awkward moment when you’re</span> walking around <span style="color:#FBFBFB;" ,>naked at your own house and you forget there is a glass window at your front door and</span> the ups delivery guy<span style="color:#FBFBFB;" ,> makes eye contact</span> with<span style="color:#FBFBFB;" ,> you while putting down</span> the package.</p></a>
+      <hr>
+    </div>
+    <div class="ppost12">
+      <h1 class="author12"> Gabriel Nkuna </h1>
+      <h1 class="username12"> @gabrielnkuna</h1>
+      <h1 class="date12">Jan 17</h1>
+      <a href="page13.html" class="page2link"><p class="post12"> <span style="color:#FBFBFB;" ,>That #AwkwardMoment</span> when you are dreaming<span style="color:#FBFBFB;" ,> in your sleep and</span> crack<span style="color:#FBFBFB;" ,> a joke</span> and laugh yourself out of the sleep.</p></a>
+      <hr>
+    </div>
+    <div class="ppost13">
+      <h1 class="author13"> Alex Thornhill </h1>
+      <h1 class="username13"> @thornberryalex</h1>
+      <h1 class="date13">Dec 29</h1>
+      <a href="page14.html" class="page2link"><p class="post13"> <span style="color:#FBFBFB;" ,>Today's #AwkwardMoment</span> Delivery man: enjoy your<span style="color:#FBFBFB;" ,> food Me: thanks you too Delivery</span> man<span style="color:#FBFBFB;" ,>: thanks you too Delivery man: ...wait  </span>Me: <span style="color:#FBFBFB;" ,>have a nice day haha Delivery man: </span>thanks you too. <span style="color:#FBFBFB;" ,>Oh u gotta sign this Me: ok thanks Me: Delivery man: thanks bye good day Me: thanks you too.</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost14">
+      <h1 class="author14"> Francisco Verdinez </h1>
+      <h1 class="username14"> @ElDoucheFrankie</h1>
+      <h1 class="date14">Dec 28 </h1>
+      <a href="page15.html" class="page2link"><p class="post14"> <span style="color:#FBFBFB;" ,>That awkward moment. Me: "Hey how have </span>you <span style="color:#FBFBFB;" ,>been?" Them: "</span>Divorced<span style="color:#FBFBFB;" ,>, hbu?" Me: " I gotta go..." </span>Lol <span style="color:#FBFBFB;" ,>#</span>awkward<span style="color:#FBFBFB;" ,>moment #bartalk</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost15">
+     <h1 class="author15"> Chasing Holiness </h1>
+      <h1 class="username15"> @sitlausdeo</h1>
+      <h1 class="date15">Dec 7</h1>
+      <a href="page16.html" class="page2link"><p class="post15"> <span style="color:#FBFBFB;" ,>One of my female friends told me</span> last night <span style="color:#FBFBFB;" ,>that</span> I was husband material. <span style="color:#FBFBFB;" ,>I didnt know how to respond so I just said that I hope I’m saint material too. #AwkwardMoment</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost16">
+      <h1 class="author16"> Cathreen Davies</h1>
+      <h1 class="username16">@CathreenDavies </h1>
+      <h1 class="date16">Dec 7</h1>
+      <a href="page17.html" class="page2link"><p class="post16"> <span style="color:#FBFBFB;" ,>That awkward moment</span> when you’re in the car with a friend Me:<span style="color:#FBFBFB;" ,> I could fall asleep anywhere anytime it’s getting really bad F:</span> so you’re a necrophiliac <span style="color:#FBFBFB;" ,>then Me: err not quite, I think you mean I have narcolepsy #awkwardmoment #BestFriends #seethefunnyside</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost17">
+      <h1 class="author17"> freelancer</h1>
+      <h1 class="username17">@azadpanchi08 </h1>
+      <h1 class="date17">Dec 6</h1>
+      <a href="page18.html" class="page2link"><p class="post17"> <span style="color:#FBFBFB;" ,>“</span>I get awkward <span style="color:#FBFBFB;" ,>when someone</span> compliments<span style="color:#FBFBFB;" ,> me and i don't know what to say like.... Someone : you look pretty today Me : happy birthday #compliment #awkwardmoment</span></p></a>
+      <hr>
+    </div>
+    <div class="ppost18">
+      <h1 class="author18"> Celina</h1>
+      <h1 class="username18">@CeliBunneh</h1>
+      <h1 class="date18">Nov 29</h1>
+      <a href="page19.html" class="page2link"><p class="post18"> last day of lecture<span style="color:#FBFBFB;" ,>, and</span> my prof told me <span style="color:#FBFBFB;" ,>he was really impressed with my work and said </span>I was really <span style="color:#FBFBFB;" ,>smart. I was like "oh...yeah." #</span>awkward<span style="color:#FBFBFB;" ,>moment</span></p></a>
+      <hr>
+    </div>
+  </div>
+  <!-- <div class="bodycontent">
     <div class="author">
       <h1 class="author1"> Mohammad Ali </h1>
       <h1 class="author2"> Alan Carr</h1>
@@ -146,6 +287,6 @@
 
 
     </div> 
-  </div>
+  </div> -->
 </body>
 </html>
